fix(gtk): improve GtkScale trough contrast
The contrast for GtkScale troughs is very low in the dark theme.
This modifies the drawing code to make the trough a transparent
light color in the dark theme (preserving the transparent dark in
the dark theme) to provide better contrast.

--- a/gtk/src/light/gtk-3.0/_common.scss
+++ b/gtk/src/light/gtk-3.0/_common.scss
@@ -3080,7 +3080,7 @@ treeview.view radio:selected { &:focus, & { @extend %radio; }} // This is a work
 %scale_trough {
   border: 1px solid $borders_color;
   border-radius: 3px;
-  background-color: $dark_fill;
+  background-color: transparentize($fg_color, if($variant == "light", 0.9, 0.7));
 
   &:disabled { background-color: $insensitive_bg_color; }
 
